@@ -13,7 +13,9 @@ BUGFIXES
 
     o Fix for nonsensical error message when VCF does not contain germline 
       variants (#166).
-
+    o Fix for various issues related to the seqlevelsStyle function (e.g.
+      #171)   
+      
 
 Changes in version 1.20.0
 -------------------------
